<resources>
    <string name="app_name">سکو</string>
    <string name="activity_purposing_name">هدفگذاری</string>
    <string name="activity_team_name">با ما بیشتر آشنا شوید</string>
    <string name="activity_daily_report_name">گزارش</string>
    <string name="activity_show_results_name">نتایج آزمون</string>
    <string name="activity_intro_name">راهنمای استفاده</string>
    <string name="activity_support_name">ما را حمایت کنید</string>
    <string name="activity_lightner_info_name">راهنمای لایتنر</string>
    <string name="activity_lightner_add_new_name">اضافه کردن برگه جدید</string>
    <string name="activity_lightner_buy_new_name_1">جعبه لایتنر</string>
    <string name="activity_lightner_buy_new_name_2">خرید برگه جدید</string>
    <string name="activity_gozaresh_azmon">گزارش آزمون</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="btn_start">شروع برنامه</string>
    <string name="btn_skip">بزن بریم !</string>
    <string name="activity_purposing_label">هدف گذاری</string>
    <string name="slide_1_title">قدرت</string>
    <string name="slide_2_title">هدفگذاری</string>
    <string name="slide_3_title">مقایسه</string>
    <string name="slide_4_title">دسترسی</string>
    <string name="slide_5_title">ابزار</string>
    <string name="slide_6_title">گزارش</string>
    <string name="slide_7_title">مدرسه</string>
    <string name="add_dars_layout_title">وارد کردن درس جدید</string>
    <string name="add_dars_btn_confirm">ثبت</string>
    <string name="add_dars_edittext_hint">اسم درس</string>
    <string name="txt_today">امروز</string>
    <string name="txt_avg">میانگین</string>
    <string name="txt_summation">مجموع</string>
    <string name="txt_dars_mehvar">درس محور</string>
    <string name="txt_majmoo_dirooz">مجموع دیروز</string>
    <string name="txt_madreseman">مدرسه من</string>
    <string name="txt_majmoo_hafte">مجموع هفته</string>
    <string name="txt_majmoo_hafte_pish">مجموع هفته پیش</string>
    <string name="txt_mahane">ماهانه</string>
    <string name="txt_haftegi">هفتگی</string>
    <string name="txt_hafte">هفته</string>
    <string name="txt_bazdehi">بازدهی</string>
    <string name="txt_majmoohaftegi">مجموع هفتگی</string>
    <string name="txt_mianginmahane">میانگین ماهانه</string>
    <string name="txt_rotbedarclass">رتبه در کلاس</string>
    <string name="txt_moadelmahane">معدل ماهانه</string>
    <string name="txt_rotbedarmadrese">رتبه در مدرسه</string>
    <string name="txt_dars">درس</string>
    <string name="txt_nomreshoma">نمره شما</string>
    <string name="txt_mianginclass">میانگین کلاس</string>
    <string name="txt_mianginpaye">میانگین پایه</string>
    <string name="txt_bargehayeshoma">برگه های شما</string>
    <string name="txt_lightner_buy_50">خرید ۵۰ برگه جدید ۳۰۰۰ تومان</string>
    <string name="txt_lightner_buy_100">خرید ۱۰۰ برگه جدید ۵۰۰۰ تومان</string>
    <string name="txt_lightner_buy_200">خرید ۲۰۰ برگه جدید ۸۰۰۰ تومان</string>
    <string name="txt_no_taklif_exists">تکلیفی برای امروز وجود ندارد</string>
    <string name="txt_entekhabkonid">انتخاب کنید</string>
    <string name="txt_updateeverymonth">هر ماه یک بار به روز رسانی می شود</string>
    <string name="txt_thisforschools">این آیتم برای مدارس در دسترس می باشد</string>
    <string name="txt_entekhabemaqta">مقطع خود را انتخاب کنید</string>
    <string name="txt_timenotvalidated">زمان وارد شده نمی تواند صفر باشد</string>
    <string name="txt_no_gozaresh_exists">هنوز گزارشی وجود ندارد</string>
    <string name="txt_no_empty_lessons">دروس انتخابی نمیتواند خالی باشد</string>
    <string name="txt_wrongdatacalcpercentage">اطلاعات وارد شده اشتباه است</string>
    <string name="txt_toolsdescription">
        نجاری بدون اره و گیره و سمباده و ... مگه میشه ؟!
        شک نکن درس خوندن هم ابزار لازم داره.
        ابزارهایی که کارتو راحت کنن و سریع تر به پیشرفت برسوننت.
    </string>
    <string name="activity_lightner_empty">هنوز برگه ای برای مرور در این بخش ندارید.</string>
    <string name="activity_lightner_dont_review">زمان مرور نرسیده است.</string>
    <string name="connect_title">وصل شد</string>
    <string name="disconnect_title">وصل نشد</string>
    <string name="slider_bezan_berim">بزن بریم!</string>
    <string name="slider_finish">پایان</string>
    <string name="weekday_today">امروز</string>
    <string name="weekday_saturday">شنبه</string>
    <string name="weekday_sunday">یکشنبه</string>
    <string name="weekday_monday">دوشنبه</string>
    <string name="weekday_tuesday">سه شنبه</string>
    <string name="weekday_wednesday">چهارشنبه</string>
    <string name="weekday_thursday">پنجشنبه</string>
    <string name="weekday_friday">جمعه</string>
    <string name="lotfan_barname_haftegi_ra_vared_konid">وارد کردن برنامه هفتگی</string>
    <string name="vared_kardan_takalife_emroz">وارد کردن تکالیف امروز</string>
    <string name="vared_kardan_takalife_emroz_after">حواست باشه</string>
    <string name="takalife_man">تکالیف من</string>
    <string name="motalee_emroz">مطالعه امروز</string>
    <string name="havaset_bashe">حواست باشه ها!</string>
    <string name="moshaver">آقای مشاور</string>
    <string name="index_first">زنگ اول</string>
    <string name="index_second">زنگ دوم</string>
    <string name="index_third">زنگ سوم</string>
    <string name="index_forth">زنگ چهارم</string>
    <string name="index_fifth">زنگ پنجم</string>
    <string name="index_sixth">زنگ ششم</string>
</resources>