<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="com.goharshad.arena.sakoo.ChartToday">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/chart_today_txt_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/txt_today"
            android:textColor="@color/colorDark_1"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/chart_today_txt_study_fraction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="03:50 / 05:00"
            android:textColor="@color/colorDark_1"
            android:textSize="18.5dp" />

    </LinearLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart_today_barchart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="7" />

    <LinearLayout
        android:id="@+id/chart_today_sumation_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/chart_today_txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15.5dp"
                android:text="@string/txt_majmoo_dirooz" />

            <TextView
                android:id="@+id/chart_today_majmoo_dirooz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="03 : 50"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/chart_today_txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15.5dp"
                android:text="@string/txt_majmoo_hafte" />

            <TextView
                android:id="@+id/chart_today_majmoo_hafte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="03 : 50"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/chart_today_txt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15.5dp"
                android:text="@string/txt_majmoo_hafte_pish" />

            <TextView
                android:id="@+id/chart_today_majmoo_hafte_pish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp"
                android:text="03 : 50" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chart_today_daycounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="17.5dp"
            android:weightSum="7">

            <View
                android:id="@+id/weekday_progress_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="#f33333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chart_today_txt5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="1.5dp"
                android:paddingTop="1.5dp"
                android:text="@string/weekday_saturday"
                android:textColor="@color/colorDark_1"
                android:textSize="11.25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top"
                android:text="|"
                android:textColor="@color/colorBlack"
                android:textSize="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/chart_today_txt6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="1.5dp"
                android:paddingTop="1.5dp"
                android:text="@string/weekday_sunday"
                android:textColor="@color/colorDark_1"
                android:textSize="11.25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top"
                android:text="|"
                android:textColor="@color/colorBlack"
                android:textSize="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chart_today_txt7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="1.5dp"
                android:paddingTop="1.5dp"
                android:text="@string/weekday_monday"
                android:textColor="@color/colorDark_1"
                android:textSize="11.25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top"
                android:text="|"
                android:textColor="@color/colorBlack"
                android:textSize="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chart_today_txt8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="1.5dp"
                android:paddingTop="1.5dp"
                android:text="@string/weekday_tuesday"
                android:textColor="@color/colorDark_1"
                android:textSize="11.25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top"
                android:text="|"
                android:textColor="@color/colorBlack"
                android:textSize="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chart_today_txt9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="1.5dp"
                android:paddingTop="1.5dp"
                android:text="@string/weekday_wednesday"
                android:textColor="@color/colorDark_1"
                android:textSize="11.25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top"
                android:text="|"
                android:textColor="@color/colorBlack"
                android:textSize="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chart_today_txt10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="1.5dp"
                android:paddingTop="1.5dp"
                android:text="@string/weekday_thursday"
                android:textColor="@color/colorDark_1"
                android:textSize="11.25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_margin="0dp"
                android:gravity="top"
                android:padding="0dp"
                android:text="|"
                android:textColor="@color/colorBlack"
                android:textSize="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chart_today_txt11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="1.5dp"
                android:paddingTop="1.5dp"
                android:text="@string/weekday_friday"
                android:textColor="@color/colorDark_1"
                android:textSize="11.25dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
